--- a/helloworld.html
+++ b/helloworld.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         Hello, sayang MAMA!
-        <h1>
+        <h1 style="color:blue;">
             Welcome to my website
         </h1>
         <h2> HELLO </h2>
