--- a/helloworld.html
+++ b/helloworld.html
@@ -5,8 +5,8 @@
     </head>
     <body>
         Hello, sayang MAMA!
-        <h1 style="color:blue;">
-            Welcome to my website
+        <h1>
+            Welcome to my website!!
         </h1>
         <h2> HELLO </h2>
     </body>
