--- a/helloworld.html
+++ b/helloworld.html
@@ -8,6 +8,6 @@
         <h1 style="color:blue;">
             Welcome to my website
         </h1>
-        <h2> HELLO </h2>
+        <h2 style="color:purple;"> HELLO </h2>
     </body>
 </html>
