--- a/helloworld.html
+++ b/helloworld.html
@@ -8,6 +8,6 @@
         <h1>
             Welcome to my website!!
         </h1>
-        <h2> HELLO </h2>
+        <h2 style="color:cyan;"> HELLO </h2>
     </body>
 </html>
