--- a/helloworld.html
+++ b/helloworld.html
@@ -5,9 +5,9 @@
     </head>
     <body>
         Hello, sayang MAMA!
-        <h1>
+        <h1 style="color:darkmagenta;">
             Welcome to my website!!
         </h1>
-        <h2 style="color:cyan;"> HELLO </h2>
+        <h2 style="color:rgb(15, 104, 104);"> HELLO </h2>
     </body>
 </html>
