--- a/helloworld.html
+++ b/helloworld.html
@@ -2,12 +2,18 @@
 <html lang="ms">
     <head>
         <title>Hello!</title>
+        <style>
+            h1{
+                color: blue;
+            }
+            h2{
+                color:cyan;
+            }
+        </style>
     </head>
     <body>
         Hello, sayang MAMA!
-        <h1 style="color:darkmagenta;">
-            Welcome to my website!!
-        </h1>
-        <h2 style="color:purple;"> HELLO </h2>
+        <h1> Welcome to my website!! </h1>
+        <h2> HELLO </h2>
     </body>
-</html>
+</html
