--- a/helloworld.html
+++ b/helloworld.html
@@ -4,16 +4,18 @@
         <title>Hello!</title>
         <style>
             h1{
-                color: blue;
+                color: mediumseagreen;
             }
             h2{
-                color:cyan;
+                color:mediumvioletred;
             }
         </style>
     </head>
     <body>
         Hello, sayang MAMA!
-        <h1> Welcome to my website!! </h1>
+        <h1>
+            Welcome to my website ;)
+        </h1>
         <h2> HELLO </h2>
     </body>
-</html
+</html>
